--- a/recovery/build.gradle
+++ b/recovery/build.gradle
@@ -1,15 +1,16 @@
 apply plugin: 'com.android.library'
-apply plugin: 'com.github.dcendents.android-maven'
-apply plugin: 'com.jfrog.bintray'
+apply from: "https://raw.githubusercontent.com/BlackYHawk/BintrayUploadScript/master/bintray.gradle"
+
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.0"
+    compileSdkVersion rootProject.ext.androidCompileSdkVersion
+    buildToolsVersion rootProject.ext.androidBuildToolsVersion
     resourcePrefix ""
+
     defaultConfig {
-        minSdkVersion 14
-        targetSdkVersion 24
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
+        versionCode rootProject.ext.releaseVersionCode
+        versionName rootProject.ext.releaseVersionName
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -27,25 +28,6 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:24.2.0'
+    implementation "com.android.support:appcompat-v7:$rootProject.ext.androidSupportSdkVersion"
     testCompile 'junit:junit:4.12'
 }
-
-ext {
-    upload_group_id = 'com.zxy.android'
-    upload_version = '0.0.3'
-
-    site_url = 'https://github.com/Sunzxyong/Recovery'
-    git_url = 'https://github.com/Sunzxyong/Recovery.git'
-    git_issue_url = 'https://github.com/Sunzxyong/Recovery/issues'
-
-    bintray_pkg_repo = 'maven'
-    bintray_pkg_name = 'Recovery'
-    bintray_pkg_desc = 'A crash recover framework'
-
-    developer_id = 'Sunzxyong'
-    developer_name = 'zhengxiaoyong'
-    developer_email = '1175151739@qq.com'
-}
-
-apply from: 'publish.gradle'
