--- a/recovery/src/main/AndroidManifest.xml
+++ b/recovery/src/main/AndroidManifest.xml
@@ -1,19 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.zxy.recovery">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.hawk.recovery">
 
     <application android:supportsRtl="true">
-        <activity
-            android:name=".core.RecoveryActivity"
-            android:excludeFromRecents="true"
-            android:noHistory="true"
-            android:process=":recover"
-            android:screenOrientation="portrait"
-            android:theme="@style/RecoveryTheme.NoActionBar">
-        </activity>
-
         <service
-            android:name=".core.RecoveryService"
+            android:name="com.hawk.recovery.core.RecoveryService"
             android:enabled="true"
             android:exported="false"
             android:process=":recover">
