--- a/recovery-no-op/build.gradle
+++ b/recovery-no-op/build.gradle
@@ -1,16 +1,14 @@
 apply plugin: 'com.android.library'
-apply plugin: 'com.github.dcendents.android-maven'
-apply plugin: 'com.jfrog.bintray'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.0"
+    compileSdkVersion rootProject.ext.androidCompileSdkVersion
+    buildToolsVersion rootProject.ext.androidBuildToolsVersion
 
     defaultConfig {
-        minSdkVersion 14
-        targetSdkVersion 24
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
+        versionCode rootProject.ext.releaseVersionCode
+        versionName rootProject.ext.releaseVersionName
 
     }
     buildTypes {
@@ -22,25 +20,6 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:24.2.0'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation "com.android.support:appcompat-v7:$rootProject.ext.androidSupportSdkVersion"
 }
-
-ext {
-    upload_group_id = 'com.zxy.android'
-    upload_version = RECOVERY_VERSION
-
-    site_url = 'https://github.com/Sunzxyong/Recovery'
-    git_url = 'https://github.com/Sunzxyong/Recovery.git'
-    git_issue_url = 'https://github.com/Sunzxyong/Recovery/issues'
-
-    bintray_pkg_repo = 'maven'
-    bintray_pkg_name = 'Recovery-no-op'
-    bintray_pkg_desc = 'A crash recover framework'
-
-    developer_id = 'Sunzxyong'
-    developer_name = 'zhengxiaoyong'
-    developer_email = '1175151739@qq.com'
-}
-
-apply from: 'publish.gradle'
